# hut-finder

./: .env  .gitignore  README.md  compose.yaml
backups/: README.md
hut-finder-api/: .gitignore  Cargo.toml  Dockerfile  README.md  go.mod  go.sum  main.go
hut-finder-api-rust/: README.md
hut-finder-api-rust/src/: app.rs
hut-finder-api/cmd/server/: main.go
hut-finder-api/pkg/api/: hutHandler.go  pingHandler.go  router.go  sessionHandler.go  userHandler.go
hut-finder-api/pkg/config/: config.go
hut-finder-api/pkg/db/: db.go
hut-finder-api/pkg/middleware/: middleware.go
hut-finder-api/pkg/model/: errors.go  hut.go  ping.go  session.go  user.go  validationError.go
hut-finder-api/pkg/repository/: hutRepository.go  sessionRepository.go  userRepository.go
hut-finder-api/pkg/service/: hutService.go  sessionService.go  userService.go
hut-finder-api/pkg/util/: jwtUtils.go
hut-finder-api/scripts/0.1/2-browse-huts-add-hut-categories/: 1.add-categories.sql  2.add-great-walk-huts.sql  3.add-individually-priced-huts.sql  4.add-club-huts.sql  5.add-serviced-huts.sql  6.add-standard-huts.sql  7.add-basic-huts.sql  8.post-insert.sql  add-categories.sql
hut-finder-api/scripts/0.1/initialise-tables/: initialise-tables.sql
hut-finder-api/src/: app.rs  main.rs
hut-finder-api/src/models/: hut.rs  ping.rs
hut-finder-api/src/routes/: hut.rs  ping.rs
hut-finder-client/: README.md  index.html  package-lock.json  package.json
hut-finder-utilities/: .gitignore  Cargo.toml  Dockerfile  README.md  go.mod  go.sum  main.go
init/: restore.sh
init/backups/: README.md
(+29 files in other folders)
