[package]
name = "hut-finder-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
chrono = { version = "0.4.38", features = ["serde"] }
hyper = { version = "1.5.0", features = ["full"] }
tokio = { version = "1.4.11", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
tokio-postgres = "0.7.12"
dotenv = "0.15.0"